<resources>
    <string name="app_name">brlock-mobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tizimga_kirish">Tizimga kirish</string>
    <string name="telefon_raqam">Telefon raqam</string>
    <string name="parol">Parol</string>
    <string name="version">version 1.0</string>
    <string name="royxatdan_otish">Ro\'yxatdan o\'tish</string>
    <string name="car_plate_number">Mashina raqami</string>
    <string name="username">Username</string>
    <string name="ism">Ism</string>
    <string name="familiya">Familiya</string>

    <string name="back_again">Dasturdan chiqish uchun yana bir marta bosing</string>
    <string name="check_connection">Internetni tekshirib koring va yana urinib koring</string>
    <string name="slow_internet">Internet tezligi past, iltimos kutib turing</string>
    <string name="smth_wrong">Nimadir noto\'g\'ri bajarildi. Iltimos, yana bir bor urinib ko\'ring</string>
    <string name="take_photo">Take photo</string>
    <string name="fullName">Surname Name</string>
    <string name="_998977367660">+998977367660</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="a">A</string>
    <string name="edit">Edit</string>
    <string name="_977367660">977367660</string>
    <string name="_998123456789">998123456789</string>
</resources>