<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/screenStyle">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="30dp"
        android:text="@string/tizimga_kirish"
        android:textColor="#303B4F"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login">

        <!--<br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/phone_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/_998123456789"
            android:inputType="phone"
            android:padding="20dp"
            android:textSize="16sp"
            android:typeface="normal"
            mask:allowed_chars="1234567890"
            mask:mask="###(##)###-##-##" />-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/phone_number_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="phone"
                android:background="@color/white"
                android:hint="@string/telefon_raqam"
                android:inputType="phone"
                android:padding="20dp"
                android:singleLine="true"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:autofillHints="phone"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:layout_constraintBottom_toTopOf="@id/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number">

        <!-- <EditText
             android:id="@+id/password_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:autofillHints="password"
             android:background="@color/white"
             android:hint="@string/parol"
             android:inputType="textVisiblePassword"
             android:padding="20dp"
             android:singleLine="true"
             android:textSize="16sp" />-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:backgroundTint="@color/white"
                android:hint="@string/parol"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/royxatdan_otish"
        android:textColor="#166BFA"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#166BFA"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="@id/app_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/tizimga_kirish"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/app_version"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/version"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


